[gd_scene load_steps=4 format=3 uid="uid://cwpps6n74q1r2"]

[ext_resource type="Script" path="res://scene/pemburu/Node2D.gd" id="1_5j5pb"]
[ext_resource type="PackedScene" uid="uid://dc5turancs54e" path="res://scene/components/endScreen.tscn" id="3_flwlw"]
[ext_resource type="Texture2D" uid="uid://cpsy3xlgxodxn" path="res://asset/country-platform-files/country-platform-preview.png" id="3_u4r4i"]

[node name="Node2D" type="Node"]
script = ExtResource("1_5j5pb")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Country-platform-preview" type="Sprite2D" parent="."]
position = Vector2(320.5, 161)
scale = Vector2(1.66927, 1.41964)
texture = ExtResource("3_u4r4i")

[node name="jalan" type="Marker2D" parent="."]
position = Vector2(0, 232)

[node name="terbang" type="Marker2D" parent="."]
position = Vector2(2, 90)

[node name="titikTengah" type="Marker2D" parent="."]
position = Vector2(320, 160)

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -127.5
offset_top = -34.0
offset_right = 127.5
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.5
offset_right = 132.5
offset_bottom = 127.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
Tangkap 5 hewan
tanpa membunuh hewan yang dilindung!

tekan dimana saja untuk memulai"
horizontal_alignment = 1

[node name="skor" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -69.0
offset_top = 17.0
offset_right = -17.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="endScreen" parent="." instance=ExtResource("3_flwlw")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
